--- a/5. 性能优化/5-3. 优化loader性能/课件.md
+++ b/5. 性能优化/5-3. 优化loader性能/课件.md
@@ -48,5 +48,45 @@ module.exports = {
 
 ## 缓存loader的结果
 
+我们可以基于一种假设：如果某个文件内容不变，经过相同的loader解析后，解析后的结果也不变
+
+于是，可以将loader的解析结果保存下来，让后续的解析直接使用保存的结果
+
+`cache-loader`可以实现这样的功能
+
+```js
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        use: ['cache-loader', ...loaders]
+      },
+    ],
+  },
+};
+```
+
+有趣的是，`cache-loader`放到最前面，却能够决定后续的loader是否运行
+
+实际上，loader的运行过程中，还包含一个过程，即`pitch`
+
+![](assets/2020-02-21-13-32-36.png)
+
+`cache-loader`还可以实现各自自定义的配置，具体方式见文档
+
 ## 为loader的运行开启多线程
 
+`thread-loader`会开启一个线程池，线程池中包含适量的线程
+
+它会把后续的loader放到线程池的线程中运行，以提高构建效率
+
+由于后续的loader会放到新的线程中，所以，后续的loader不能：
+
+- 使用 webpack api 生成文件
+- 无法使用自定义的 plugin api
+- 无法访问 webpack options
+
+> 在实际的开发中，可以进行测试，来决定`thread-loader`放到什么位置
+
+**特别注意**，开启和管理线程需要消耗时间，在小型项目中使用`thread-loader`反而会增加构建时间
