--- a/5. 性能优化/5-5. 手动分包/课件.md
+++ b/5. 性能优化/5-5. 手动分包/课件.md
@@ -10,7 +10,7 @@
 
 公共模块会被打包成为动态链接库(dll Dynamic Link Library)，并生成资源清单
 
-1. 根据入口模块进行正常打包
+2. 根据入口模块进行正常打包
 
 打包时，如果发现模块中使用了资源清单中描述的模块，则不会形成下面的代码结构
 
@@ -58,8 +58,8 @@ _.isArray($(".red"));
 module.exports = {
   mode: "production",
   entry: {
-    jquery: "jquery",
-    lodash: "lodash"
+    jquery: ["jquery"],
+    lodash: ["lodash"]
   },
   output: {
     filename: "dll/[name].js",
@@ -102,6 +102,50 @@ module.exports = {
 ```js
 new CleanWebpackPlugin({
   // 要清除的文件或目录
-  cleanOnceBeforeBuildPatterns: ["**/*", '!src']
+  // 排除掉dll目录本身和它里面的文件
+  cleanOnceBeforeBuildPatterns: ["**/*", '!dll', '!dll/*']
 })
 ```
+
+> 目录和文件的匹配规则使用的是[globbing patterns](https://github.com/sindresorhus/globby#globbing-patterns)
+
+3. 使用`DllReferencePlugin`控制打包结果
+
+```js
+module.exports = {
+  plugins:[
+    new webpack.DllReferencePlugin({
+      manifest: require("./dll/jquery.manifest.json")
+    }),
+    new webpack.DllReferencePlugin({
+      manifest: require("./dll/lodash.manifest.json")
+    })
+  ]
+}
+
+```
+
+# 总结
+
+**手动打包的过程**：
+
+1. 开启`output.library`暴露公共模块
+2. 用`DllPlugin`创建资源清单
+3. 用`DllReferencePlugin`使用资源清单
+
+**手动打包的注意事项**：
+
+1. 资源清单不参与运行，可以不放到打包目录中
+2. 记得手动引入公共JS，以及避免被删除
+3. 不要对小型的公共JS库使用
+
+**优点**：
+
+1. 极大提升自身模块的打包速度
+2. 极大的缩小了自身文件体积
+3. 有利于浏览器缓存第三方库的公共代码
+
+**缺点**：
+
+1. 使用非常繁琐
+2. 如果第三方库中包含重复代码，则效果不太理想
